# scenariomip-core-variables-zenodo-upload-scratch

./: .copier-answers.yml  .gitignore  METADATA.json  README.md  pyproject.toml  upload.py
