[project]
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.com"},
]
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.5",
    "openscm-zenodo>=0.3.1",
    "pandas>=2.2.3",
    "pre-commit>=3.3.1",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "typer>=0.15.1",
]
name = "prototype"
version = "0.1.0"
description = "Uploads of the ScenarioMIP core variables to zenodo. Unlikely to be needed for long."
readme = "README.md"

[tool.uv]
package = false

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
